# wirelab

./: .gitignore  Cargo.toml  README.md
assets/: theme.json
assets/boards/: esp32-c3-devkitm-1.json  esp32-c5-devkitc-1.json  esp32-c6-devkitc-1.json  esp32-c6-lcd-147.json  esp32-devkitc-v4.json  esp32-s3-devkitc-1.json
assets/components/: buzzer-active.json  buzzer-passive.json  dht22.json  generic-analog-sensor.json  hc-sr04.json  junction-dot.json  led-blue.json  led-green.json  led-red.json  led-yellow.json  photoresistor-ldr.json  pir-motion-sensor.json  potentiometer-10k.json  push-button.json  rdm6300.json  reed-switch.json  relay-module-1ch.json  resistor-100.json  resistor-100k.json  resistor-10k.json  resistor-1k.json  resistor-1m.json  resistor-220.json  resistor-22k.json  resistor-2k2.json  resistor-330.json  resistor-470.json  resistor-470k.json  resistor-47k.json  resistor-4k7.json  rfid-rc522.json  servo-sg90.json  slide-switch-spdt.json  soil-moisture-sensor.json  st7735-tft-128.json  tilt-switch.json  toggle-switch.json  touch-sensor-ttp223.json
assets/examples/: 01-rgb-rainbow.wirelab.json  02-pwm-breathe.wirelab.json  03-blink-rules.wirelab.json  04-reaction-timer.wirelab.json  05-night-light.wirelab.json  06-ohmmeter.wirelab.json  07-morse-beacon.wirelab.json  08-uart-echo.wirelab.json  09-lcd-clock.wirelab.json  10-flow-blink.wirelab.json  11-security-panel.wirelab.json  12-house-and-garage.wirelab.json  13-lcd-messenger.wirelab.json  14-mood-knob.wirelab.json  15-touch-relay-lamp.wirelab.json  16-flow-dusk-dimmer.wirelab.json  17-plant-monitor.wirelab.json  18-rfid-lock.wirelab.json  19-weather-lcd.wirelab.json  Reaction timer Custom.wirelab.json
crates/wirelab-core/: Cargo.toml
crates/wirelab-core/examples/: validate_asset.rs
crates/wirelab-core/src/: autowire.rs  board.rs  circuit.rs  component.rs  engine.rs  flow.rs  geometry.rs  lib.rs  library.rs  netlist.rs  program.rs  project.rs  script.rs  script_api.rs  sim.rs  validate.rs
crates/wirelab-core/tests/: assets.rs  pipeline.rs  scripting.rs
crates/wirelab-flow-ui/: Cargo.toml
crates/wirelab-flow-ui/src/: lib.rs
crates/wirelab-gui/: Cargo.toml
crates/wirelab-gui/src/: ai_import.rs  app.rs  canvas.rs  draw.rs  flash.rs  flow_ui.rs  http_fetch.rs  ide.rs  ide_snippets.rs  live.rs  main.rs  mcp.rs  panels.rs  panels_info.rs  rhai_docs.rs  rhai_lint.rs  wiring_guide.rs
crates/wirelab-link/: Cargo.toml
crates/wirelab-link/examples/: board_server.rs  hil_check.rs  set_rgb.rs  wifi_probe.rs
crates/wirelab-link/src/: discovery.rs  lib.rs  serial.rs  sim.rs  tcp.rs
crates/wirelab-link/tests/: board_server.rs  live_loop.rs
crates/wirelab-proto/: Cargo.toml
crates/wirelab-proto/src/: frame.rs  lib.rs
firmware/wirelab-fw/: Cargo.toml
firmware/wirelab-fw/.cargo/: config.toml
firmware/wirelab-fw/src/: main.rs  wifi.rs
